--- a/app/src/main/res/layout/race_list_item.xml
+++ b/app/src/main/res/layout/race_list_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="40dp">
     <TextView
         android:id="@+id/riderId"
         android:gravity="center_vertical"
@@ -16,13 +16,15 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:fontFamily="monospace"
         android:text="我是zoker"/>
     <TextView
         android:id="@+id/riderTime"
         android:gravity="center_vertical|end"
-        android:layout_width="100dp"
+        android:layout_width="120dp"
         android:layout_height="match_parent"
         android:layout_marginRight="9dp"
+        android:fontFamily="@font/source_code_pro_blacklt"
         android:text="22:33:11.2334"/>
     <Button
         android:id="@+id/edit"
