--- a/app/src/main/res/layout/race_list_item.xml
+++ b/app/src/main/res/layout/race_list_item.xml
@@ -8,7 +8,6 @@
         android:gravity="center_vertical"
         android:layout_width="60dp"
         android:layout_height="match_parent"
-        android:text="123"
         />
     <TextView
         android:id="@+id/riderName"
@@ -16,20 +15,19 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:fontFamily="monospace"
-        android:text="我是zoker"/>
+        android:fontFamily="monospace"/>
     <TextView
         android:id="@+id/riderTime"
         android:gravity="center_vertical|end"
         android:layout_width="120dp"
         android:layout_height="match_parent"
-        android:layout_marginRight="9dp"
-        android:fontFamily="@font/source_code_pro_blacklt"
-        android:text="22:33:11.2334"/>
+        android:layout_marginEnd="9dp"
+        android:fontFamily="@font/source_code_pro_blacklt"/>
     <Button
         android:id="@+id/edit"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:text="编辑"/>
+        android:layout_marginEnd="5dp"
+        android:text="@string/edit"/>
 
 </LinearLayout>
