--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,6 +21,7 @@
         android:text="@string/startButtonText"
         android:textSize="66sp"
         android:textAllCaps="false"
+        android:fontFamily="@font/source_code_pro_blacklt"
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
