UI微调，并且防止选中已经设置过时间的条目

--- a/app/src/main/res/layout/fragment_rider_list.xml
+++ b/app/src/main/res/layout/fragment_rider_list.xml
@@ -17,6 +17,7 @@
         android:id="@+id/editArea"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent">
         <EditText
             android:layout_marginLeft="5dp"
