--- a/app/src/main/res/layout/race_list_item.xml
+++ b/app/src/main/res/layout/race_list_item.xml
@@ -14,8 +14,7 @@
         android:gravity="center_vertical"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:fontFamily="monospace"/>
+        android:layout_weight="1"/>
     <TextView
         android:id="@+id/riderTime"
         android:gravity="center_vertical|end"
