--- a/app/src/main/res/layout/rider_list_item.xml
+++ b/app/src/main/res/layout/rider_list_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="40dp">
     <TextView
         android:id="@+id/riderId"
         android:gravity="center_vertical"
@@ -18,6 +18,7 @@
         android:id="@+id/delete"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_marginEnd="5dp"
         android:text="@string/delete"/>
 
 </LinearLayout>
