--- a/app/src/main/res/layout/race_finish_list_item.xml
+++ b/app/src/main/res/layout/race_finish_list_item.xml
@@ -8,11 +8,10 @@
         android:id="@+id/riderId"
         android:gravity="center_vertical"
         android:layout_width="60dp"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent"/>
     <TextView
         android:id="@+id/riderTime"
-        android:gravity="center_vertical|end"
+        android:gravity="center_vertical|start"
         android:layout_width="120dp"
         android:layout_height="match_parent"
         android:layout_marginEnd="9dp"
