--- a/app/src/main/res/layout/activity_choose_finish_rider.xml
+++ b/app/src/main/res/layout/activity_choose_finish_rider.xml
@@ -5,6 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.sub.ChooseFinishRider">
+    tools:context="edu.zjut.cyclingClubRaceTool.ui.sub.ChooseFinishRider">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
