--- a/app/src/main/res/layout/fragment_tools.xml
+++ b/app/src/main/res/layout/fragment_tools.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.tools.ToolsFragment">
+    tools:context="edu.zjut.cyclingClubRaceTool.ui.tools.ToolsFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
