--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.example.timer1test.ui.home.HomeFragment"
+        android:name="edu.zjut.cyclingClubRaceTool.ui.home.HomeFragment"
         android:label="@string/title_time"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.example.timer1test.ui.riderList.RiderListFragment"
+        android:name="edu.zjut.cyclingClubRaceTool.ui.riderList.RiderListFragment"
         android:label="@string/title_riders"
         tools:layout="@layout/fragment_rider_list" />
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.example.timer1test.ui.tools.ToolsFragment"
+        android:name="edu.zjut.cyclingClubRaceTool.ui.tools.ToolsFragment"
         android:label="@string/title_tools"
         tools:layout="@layout/fragment_tools" />
 </navigation>
