--- a/app/src/main/res/layout/activity_choose_finish_rider.xml
+++ b/app/src/main/res/layout/activity_choose_finish_rider.xml
@@ -6,5 +6,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="edu.zjut.cyclingClubRaceTool.ui.sub.ChooseFinishRider">
+    <TextView
+        android:id="@+id/hint"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:text="@string/pleaseChooseRider"
+        android:textSize="30sp"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/riderRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/hint"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
