--- a/app/src/main/res/layout/fragment_tools.xml
+++ b/app/src/main/res/layout/fragment_tools.xml
@@ -7,6 +7,7 @@
     tools:context="edu.zjut.cyclingClubRaceTool.ui.tools.ToolsFragment">
 
     <LinearLayout
+        android:id="@+id/modeLinear"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -43,8 +44,13 @@
             app:thumbTint="@color/workmode_switch_thumb_color"
             app:thumbTintMode="multiply"
             />
-
-
     </LinearLayout>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/clearData"
+        android:text="@string/clearData"
+        android:textSize="30sp"
+        app:layout_constraintTop_toBottomOf="@id/modeLinear"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
