--- a/app/src/main/res/layout/activity_input_riders.xml
+++ b/app/src/main/res/layout/activity_input_riders.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:hint="@string/inputRidersHint"
+        android:inputType="text"
         android:gravity="top"
         android:padding="10dp"
         app:layout_constraintTop_toTopOf="parent"
