修改一个控件id

--- a/app/src/main/res/layout/activity_input_riders.xml
+++ b/app/src/main/res/layout/activity_input_riders.xml
@@ -8,7 +8,7 @@
     tools:context="edu.zjut.cyclingClubRaceTool.ui.sub.ChooseFinishRider">
 
     <EditText
-        android:id="@+id/inputRiderTextView"
+        android:id="@+id/inputRiderEditText"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:hint="@string/inputRidersHint"
