--- a/app/src/main/res/layout/activity_input_riders.xml
+++ b/app/src/main/res/layout/activity_input_riders.xml
@@ -20,6 +20,8 @@
         app:layout_constraintBottom_toTopOf="@id/confirmButton"/>
     <Button
         android:id="@+id/confirmButton"
+        android:height="90dp"
+        android:textSize="30sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/confirm"
