--- a/app/src/main/res/layout/rider_list_item.xml
+++ b/app/src/main/res/layout/rider_list_item.xml
@@ -18,7 +18,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"/>
     <Button
-        android:id="@+id/delete"
+        android:id="@+id/delete_button"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:text="@string/delete"/>
