--- a/app/src/main/res/layout/race_finish_list_item.xml
+++ b/app/src/main/res/layout/race_finish_list_item.xml
@@ -23,7 +23,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"/>
     <Button
-        android:id="@+id/edit"
+        android:id="@+id/editButton"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:text="@string/edit"/>
