--- a/app/src/main/res/layout/activity_edit_start_rider.xml
+++ b/app/src/main/res/layout/activity_edit_start_rider.xml
@@ -6,6 +6,14 @@
     android:padding="20dp">
 
     <Button
+        android:id="@+id/cloneButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/copyScoreToOtherRider"
+        android:paddingHorizontal="2dp"
+        android:textSize="30sp"/>
+
+    <Button
         android:id="@+id/exchangeButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
