--- a/app/src/main/res/layout/rider_list_item.xml
+++ b/app/src/main/res/layout/rider_list_item.xml
@@ -18,7 +18,14 @@
         android:layout_height="match_parent"
         android:layout_weight="1"/>
     <Button
-        android:id="@+id/delete_button"
+        android:id="@+id/editButton"
+        android:layout_marginHorizontal="4dp"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:text="@string/edit"/>
+    <Button
+        android:id="@+id/deleteButton"
+        android:layout_marginHorizontal="4dp"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:text="@string/delete"/>
