--- a/app/src/main/res/layout/activity_edit_rider.xml
+++ b/app/src/main/res/layout/activity_edit_rider.xml
@@ -68,6 +68,7 @@
         <EditText
             android:id="@+id/startEditText"
             android:layout_marginEnd="30dp"
+            android:hint="@string/datetimeFormatterHint"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="datetime"/>
@@ -89,6 +90,7 @@
         <EditText
             android:id="@+id/finishEditText"
             android:layout_marginEnd="30dp"
+            android:hint="@string/datetimeFormatterHint"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="datetime"
