--- a/app/src/main/res/layout/fragment_rider_list.xml
+++ b/app/src/main/res/layout/fragment_rider_list.xml
@@ -11,9 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/editArea"
+        app:layout_constraintBottom_toTopOf="@id/IOLayout"
         />
     <LinearLayout
+        android:id="@+id/IOLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
