--- a/app/src/main/res/layout/fragment_tools.xml
+++ b/app/src/main/res/layout/fragment_tools.xml
@@ -12,6 +12,7 @@
         android:layout_height="40dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginVertical="10dp"
         android:paddingHorizontal="20dp">
 
         <TextView
@@ -49,9 +50,27 @@
         android:layout_marginHorizontal="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/calcScore"
+        android:text="@string/calcScore"
+        android:textSize="30sp"
+        app:layout_constraintTop_toBottomOf="@id/modeLinear"/>
+
+    <Button
+        android:layout_marginHorizontal="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/clearData"
         android:text="@string/clearData"
         android:textSize="30sp"
-        app:layout_constraintTop_toBottomOf="@id/modeLinear"/>
+        app:layout_constraintTop_toBottomOf="@id/calcScore"/>
+
+    <Button
+        android:layout_marginHorizontal="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/about"
+        android:text="@string/about"
+        android:textSize="30sp"
+        app:layout_constraintTop_toBottomOf="@id/clearData"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
